--- a/catalog-style.css
+++ b/catalog-style.css
@@ -4,28 +4,35 @@
     min-height: 200px;
     background-color: #f5f5f5;
     padding: 10px;
-    float: left;
-    margin: 20px 0 0 20px;
+    display: inline-block;
+    vertical-align: top;
+    margin: 10px 20px 10px 0;
     position: relative;
     overflow: hidden;
-    cursor: pointer;
 }
 
-/* Style categories */
-.goods-category-list-title {
+/* Style products and categories */
+.goods-category-list-title, 
+.goods-item-title {
     text-align: center;
     padding: 15px;
     margin: 0px;
     font-size: 16px;
 }
 
-.categoryoverview {
+.goods-category-thumb-container,
+.goods-item-thumb-container {
     margin: 10px 0;
     text-align: center;
 }
 
-.categoryoverview img {
+.goods-category-thumb,
+.goods-item-thumb {
     border: 1px solid #aaa;
+}
+
+.goods-price {
+    font-weight: bold;
 }
 
 /* Pagination */
@@ -65,6 +72,7 @@ span.wpcf7-list-item {
     display: block;
 }
 
+/* Common */
 .clear {
     clear: both;
 }
