--- a/style/catalog-style.css
+++ b/style/catalog-style.css
@@ -9,7 +9,8 @@
 }
 
 /* Grid catalog */
-.goods-catalog .grid {
+.goods-catalog .grid,
+.goods-insert .grid {
     min-width: 200px;
     min-height: 200px;
     background-color: #f5f5f5;
@@ -19,6 +20,13 @@
     margin: 10px 20px 10px 0;
     position: relative;
     overflow: hidden;
+}
+.goods-insert .grid {
+    width: 200px;
+}
+.goods-insert p {
+    line-height: 1.5;
+    margin: 10px 0 10px 0;
 }
 /* Sidebar */
 .goods-sidebar {
